--- a/reservia/style.css
+++ b/reservia/style.css
@@ -1,104 +1,394 @@
 body{
-    background-color: white;
+    background-color:white;
     color: black;
-    font-family: raleway;
-    font-size: 1em;
-}
+    @font-family:"raleway";
+    font-size: 1em;}
+
+/* le header */
+
 header{
-    margin: 0px;
-    padding: auto;
-    height: 90px;
+    margin:0px;
+    padding: 0px;
+    height: 90 px;
     display: flex;
     justify-content: space-between;
+    width: 1370px;}
+header a{
+    color: black;}
+.logo{
+    width: 90px;
+    height: 50px;
+    margin-left: 30px;}
+.menu{
+    display:flex;
+    justify-content: space-around;
+    list-style: none;
+    padding: 0px;
+    width: 400px;}
+.effet:hover{
+    border-top: solid 3px #0065FC;}
+.lien{text-decoration: none;
+    padding-top: 0px;}
+.lien2{
+        text-decoration: none;
+        padding-top : 45px;
+        color: #0065FC;
+        font-weight: bold;}
+
+/* barre de recherche */
+
+h1{
+    margin-left: 30px;
+    }
+h5{
+    padding: 0px;
+    margin-top: 0px;
+    margin-bottom: 10px;}
+.centreville{
+    margin-left: 30px;
 }
-.logo {
-    width: 60px;
-    height: 40px;
-}
+.espaceRecherche{
+    display: flex;
+    flex-wrap: nowrap;
+    margin-left: 30px;
+    margin-bottom: 50px;}
 .search{
     width: 200px;
     height: 40px;
-}
+    margin-left: 0px;
+    margin-right: 0px;}
 .bouton {
     background-color: #0065FC;
     color: white;
     width: 110px;
     height: 40px;
     border: none;
-    border-radius: 0 10px 10px 0;
-}
+    border-radius: 0 10px 10px 0;}
 
- .menu{
+/* filtre de navigation */
+
+.blocdiv{
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;}
+.filtre{
+    display: flex;
+    justify-content:flex-start;
     list-style: none;
-    width: 400px;
+    width: 70%;}
+.fi{
+    color: black;
+    font-weight: bold;
+    margin-top: 15px;}
+.margeul{
+    padding-left: 0px;}
+.log{
+    list-style: none;}
+.log {
+    border: solid;
+    border-color: #F2F2F2;
+    border-radius: 25px;
+    margin-left: 30px;
+    width: 200px;
+    height: 40px;
+    background-color: white;
+    color: black;}
+.log:hover{
+    background-color: rgb(193, 204, 204);}
+.ut{
+    color: black;
+    font-weight: bold;}
+.logtexte{
+    display: flex;
+    flex-direction: row;
+    margin-left: 30px;}
+.p500{
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+    margin-left: 10px;}
 
+/* les cartes d'hébergement*/
 
-
+.grosbloc{
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
+    width: 100%;}
+.section1{
+    width: 900px;
+    height: 650px;
+    margin-left: 30px;
+    margin-top: 30px;
+    background-color: #f2f2f2;
+    border-radius: 15px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+form i {
+    background-color: #F2F2F2;
+    width: 30px;
+    height: 25px;
+    border-radius: 10px 0 0 10px;
+    padding-left: 24px;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+ul i {
+    background-color: #DEEBFF;
+    width: 30px;
+    height: 30px;
+    border-radius: 20px;
+    color:#0065FC ;
+    padding-left: 15px;
+    padding-top: 10px;
+}
+
+
+
+
+h2{
+    margin-left: 30px;
+    padding: 0px;
+    font-weight: bold;
+}
+h3 {
+    margin: 0px;
+    padding: 0px;
+    font-weight: bold;
+}
+
+
+
+.prix{
+    margin-bottom: 60px;
+}
+.voirplus{
+    padding: 0px;
+    margin-left: 25px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+.paver:hover{
+    background-color: #f1eeee;
+}
+.paver2:hover{
+    background-color: #f1eeee;
+}
+.verti:hover{
+    background-color: #f1eeee;
+}
+.vertical:hover{
+    background-color: #f1eeee;
+}
+
+
+figcaption i {
+    color: #0065FC;
+}
+
+.item{
+    color:red;
+  
+}
+
+.acmar{
+    margin-left: 30px;
+    margin-top: 60px;
+    margin-bottom: 10px ;
+    font-weight: bold;
+}
+figcaption{
+    margin-left: 20px;
+}
+
+
+
 .eco{
     border: solid;
     border-color:#F2F2F2 ;
     padding: auto;
 }
-.lien{
-    text-decoration: none;
-    padding-top : 45px;
-  
-   
+
+
+
+
+aside{
+    background-color: #f2f2f2;
+    width: 400px;
+    height: 650px;
+    border-radius: 20px;
+    margin-left: 40px;
+    margin-top: 30px;
 }
 .image {
     width: 250px;
     height: 120px;
-    border-radius: 30px 30px 0 0;
+    border-radius: 15px 15px 0 0;
 }
 .paver {
     border: solid;
-    border-radius: 30px;
+    border-radius: 15px;
     border-color: white;
-    margin: 20px;
+    margin-top: 10px;
+    margin-left: 3px;
+    padding: 0px;
+    background-color: white;
+    height: 210px;
+    box-shadow: 0px 5px 2px 1px #ecebeb;
+
+}
+.paver2{
+    display: flex;
+    flex-direction: row;
+    border: solid 3px white;
+    border-radius: 15px;
+    width: 460px;
+    height: 150px;
+    background-color: white;
+    margin: 16px 20px;
+    box-shadow: 0px 5px 2px 1px #ecebeb;
+  
+}
+span{
+    font-weight: bold;
+}
+.fa-chart-line{
+    color: black;
+    margin-left: 80px;
 }
 .hébergements {
     width: 900Px;
-    height: 600px;
-    background-color: #F2F2F2;
+    height: 520px;
+    display: flex;
+    flex-wrap:wrap;  
+}
+.deuxieme{
+    display: flex;
+    flex-direction: row;
+    margin-left: 20px;
+    margin-bottom: 0px;
+    height: 200px;
+
+}
+.trois{
+    display: flex;
+    flex-direction: row;
+    margin-left: 20px;
+    margin-top: 0px;
+    height: 200px;
+}
+
+.mvp{
     display: flex;
     flex-wrap: wrap;
-    border: none;
-    border-radius: 40px;
-    
-}
-.mvp{
     background-color:#F2F2F2 ;
-    width: 460px;
+    width: 400px;
+    border-radius: 30px;
+
+}
+
+
+.activites{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: stretch;
+    width: 100%;
+    height: auto;
+    margin-bottom: 70px;
+    margin-left: 0px;
+}
+.img3{
+    width: 300px;
+    height: 370px;
+    border-radius:15px 15px 0 0;
+}
+
+
+.img4 {
+    height: 130px;
+    width: 250px;
+    border-radius: 15px 15px 0 0;
+}
+.horizontal{
+    display: flex;
+    flex-direction: column;
+}
+.vertical{
+    border-radius: 20px;
+    border: 0px;
+    height: 420px;
+    box-shadow: 0px 5px 2px 1px #F2F2F2;
+}
+.verti {
+    border: 0px;
+    border-radius: 15px;
+    box-shadow: 0px 5px 2px 1px #F2F2F2;
+
 
 }
 
 .image2{
-    width: 250px;
-    height: 120px;
-    border-radius: 30px 30px 0 0;
+    width: 150px;
+    height: 150px;
+    border-radius: 15px 0 0 15px;
 
 }
-.filtre{
-    display: flex;
-    justify-content:flex-start;
+
+nav a{
+    text-decoration: none;
     list-style: none;
-    text-decoration:none;
-
-
-   
 
 }
+
+/* footer */
+
 footer{
     display: flex;
     justify-content: space-around;
     background-color: #f2f2f2;
+    height: 200px;
+    width: 1370px;
     
 }
-.premier{
+footer nav {
     display: flex;
-    flex-wrap: nowrap;
-   
+    justify-content: space-around;
+}
+footer h4 {
+    display: flex;
+    justify-content: space-around;
+}
+footer li {
+    list-style: none;
+    
+}
+footer a {
+    color: black;
+}
+
+/* responsive très petite écran*/
+@media all and (min-width: 375px) and (max-width: 486px)
+{
+    h1{
+        color: red;
+    }
 }
