--- a/reservia/style.css
+++ b/reservia/style.css
@@ -8,7 +8,7 @@ body{
 /* le header */
 
 header{
-    margin:0;
+    margin:0 20px 0 0px;
     padding:0;
     height: 90px;
     display: flex;
@@ -104,7 +104,7 @@ ul i {
     padding-top: 10px;
 }
 .item{
-    color:red;}
+    color:#F2F2F2;}
 .fi{
     color: black;
     font-weight: bold;
@@ -160,9 +160,7 @@ ul i {
     display: flex;
     flex-direction: row;
     
-    height: 200px;
-
-}
+    height: 200px;}
 .paver {
     border: solid;
     border-radius: 15px;
@@ -179,7 +177,8 @@ ul i {
 .image{
     width: 250px;
     height: 120px;
-    border-radius: 15px 15px 0 0;}
+    border-radius: 15px 15px 0 0;
+    object-fit: cover;}
 figcaption i {
     color: #0065FC;}
 .trois{
@@ -235,7 +234,8 @@ h2{
 .image2{
     width: 150px;
     height: 150px;
-    border-radius: 15px 0 0 15px;}
+    border-radius: 15px 0 0 15px;
+    object-fit: cover;}
 .prix{ margin-bottom: 60px;}
 
 /* section activités à Marseille*/
@@ -265,29 +265,42 @@ h2{
     background-color: #f1eeee;}
 .img3{
     width: 300px;
-    height: 370px;
-    border-radius:15px 15px 0 0;}
+    height: 390px;
+    border-radius:15px 15px 0 0;
+    object-fit: cover;
+}
+h4{
+    padding: 0px;
+    margin: 0px;
+}
 .horizontal{
     display: flex;
     flex-direction: column;
-    margin: auto;
+    margin: 0 auto 0 auto;
     padding: auto;
 }
 .verti {
+    height: 165px;
     border: 0px;
     border-radius: 15px;
     box-shadow: 0px 5px 2px 1px #F2F2F2;
-    margin: auto;
+    margin: auto auto 30px auto;
     padding: auto;
+    
 }
 .verti:hover{
     background-color: #f1eeee;}
 .img4 {
-    height: 130px;
-    width: 250px;
-    border-radius: 15px 15px 0 0;}
+    height: 110px;
+    width: 300px;
+    border-radius: 15px 15px 0 0;
+    object-fit: cover;
+
+}
 figcaption{
-    margin-left: 20px;}
+    margin-left: 20px;
+    height: 56px;
+}
 
 /* footer */
 
@@ -312,9 +325,779 @@ footer a{
 
 /* responsive très petite écran*/
 
-@media all and (min-width: 375px) and (max-width: 486px)
+@media all and (min-width: 1100px) and (max-width: 1300px)
 {
-    h1{
-        color: red;
+    body{
+        background-color:white;
+        color: black;
+        @font-family:"raleway";
+        font-size: 1em;
+        margin: 0px;}
+    
+    /* le header */
+    
+    /* barre de recherche */
+    
+    
+    /* filtre de navigation */
+    
+    /* les cartes d'hébergement*/
+    
+    .grosbloc{
+        display: flex;
+        flex-direction: column;
+        justify-content: stretch;
+        width: 100%;}
+    .section1{
+        width: 100%;
+        height: 650px;
+        margin: auto;
+       
+        background-color: #f2f2f2;
+        border-radius: 15px;}
+    .hébergements {
+        width: 100%;
+        height: 520px;
+        display: flex;
+        flex-wrap:wrap;
     }
+    .deuxieme{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 200px;
+        margin:0 auto;
+        padding: auto;
+        
+    
+    }
+    .paver {
+        border: solid;
+        border-radius: 15px;
+        border-color: white;
+        margin: auto;
+        padding: auto;
+        background-color: white;
+        height: 250px;
+        width: auto;
+        box-shadow: 0px 5px 2px 1px #ecebeb;}
+    .paver:hover{
+        background-color: #f1eeee;}
+    .image{
+        width: 350px;
+        height: 170px;
+        border-radius: 15px 15px 0 0;
+        object-fit: cover;
+    }
+    figcaption i {
+        color: #0065FC;}
+    .trois{
+        display: flex;
+        flex-direction: row;
+        margin: auto;
+        padding: auto;
+        height: 200px;
+        width: 100%;
+    }
+    h3{
+        margin: 0px;
+        padding: 0px;
+        font-weight: bold;}
+    .voirplus{
+        padding: 0px;
+        margin: 25px auto auto 25px ;
+        font-weight: bold;}
+    
+    /* deuxieme contenaire*/
+    
+    aside{
+        background-color: #f2f2f2;
+        width: 100%;
+        height: auto;
+        border-radius: 20px;
+        margin:30px auto auto auto}
+    h2{
+        margin-left: 30px;
+        padding: 0px;
+        font-weight: bold;}
+    .fa-chart-line{
+        color: black;
+         margin-left: 80px;}
+    .mvp{
+        display: flex;
+        flex-wrap: nowrap;
+        background-color:#F2F2F2 ;
+        width: 100%;
+        border-radius: 30px;}
+    .paver2{
+        display: flex;
+        flex-direction: row;
+        border: solid 3px white;
+        border-radius: 15px;
+        width: 360px;
+        height: 150px;
+        background-color: white;
+        margin: 40px auto 30px auto;
+        box-shadow: 0px 5px 2px 1px #ecebeb;}
+    .paver2:hover{
+        background-color: #f1eeee;}
+    .image2{
+        width: 150px;
+        height: 150px;
+        border-radius: 15px 0 0 15px;
+        object-fit: cover;
+    }
+    .prix{ margin-bottom: 60px;}
+    
+    /* section activités à Marseille*/
+    
+    .acmar{
+        margin-left: 30px;
+        margin-top: 60px;
+        margin-bottom: 10px ;
+        font-weight: bold;}
+    .activites{
+ 
+    }
+    .horizontal {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        padding: auto;
+        margin: 0 auto auto auto;
+        height: auto;
+        width: 700px;
+        
+    }
+    .vertical{
+        border-radius: 20px;
+        border: 0px;
+        height: 420px;
+        box-shadow: 0px 5px 2px 1px #F2F2F2;
+        margin: auto;
+        padding: auto;
+    }
+    .vertical:hover{
+        background-color: #f1eeee;}
+    .img3{
+        width: 300px;
+        height: 390px;
+        border-radius:15px 15px 0 0;
+        object-fit: cover;
+    }
+    h4{
+        padding: 0px;
+        margin: 0px;   
+    }
+    .verti {
+        height: 165px;
+        border: 0px;
+        border-radius: 15px;
+        box-shadow: 0px 5px 2px 1px #F2F2F2;
+        margin: auto auto 30px auto;
+        padding: auto;
+        
+    }
+    .verti:hover{
+        background-color: #f1eeee;}
+    .img4 {
+        width: 300px;
+        height: 390px;
+        border-radius:15px 15px 0 0;
+        object-fit: cover;
+        margin: 0 auto;
+        padding: 0;
+    }
+    figcaption{
+        margin-left: 20px;
+        height: 56px;
+    }
+    
+    /* footer */
+    
+      
 }
+
+
+
+
+
+/* screen intermediaire */
+
+
+
+@media all and (min-width: 1000px) and (max-width: 1100px)
+{
+    body{
+        background-color:white;
+        color: black;
+        @font-family:"raleway";
+        font-size: 1em;
+        margin: 0px;}
+    
+    /* le header */
+    
+    
+    
+    /* barre de recherche */
+    
+    
+    
+    /* filtre de navigation */
+    
+    
+    
+    /* les cartes d'hébergement*/
+    
+    .grosbloc{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: stretch;
+        width: 100%;}
+    .section1{
+        width: 100%;
+        height: 950px;
+        margin: 15px auto;
+        background-color: #f2f2f2;
+        border-radius: 15px;}
+    .hébergements {
+        width: 100%;
+        height: 795px;
+        display: flex;
+        flex-wrap:nowrap;
+        flex-direction:row;
+    }
+    .deuxieme{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 100%;
+        height: 200px;
+        margin:0 auto;
+        padding: auto;
+        
+    
+    }
+    .paver {
+        border: solid;
+        border-radius: 15px;
+        border-color: white;
+        margin: 10px auto;
+        padding: auto;
+        background-color: white;
+        height: 250px;
+        width: 400px;
+        box-shadow: 0px 5px 2px 1px #ecebeb;}
+    .paver:hover{
+        background-color: #f1eeee;}
+    .image{
+        width: 400px;
+        height: 170px;
+        border-radius: 15px 15px 0 0;
+        object-fit: cover;
+    }
+    figcaption i {
+        color: #0065FC;}
+    .trois{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin: 0 auto;
+        padding: auto;
+        height: 200px;
+        width: 100%;
+    }
+    h3{
+        margin: 0px;
+        padding: 0px;
+        font-weight: bold;}
+    .voirplus{
+        padding: 0px;
+        margin: 25px auto auto 25px ;
+        font-weight: bold;}
+    
+    /* deuxieme contenaire*/
+    
+    aside{
+        background-color: #f2f2f2;
+        width: 90%;
+        height: auto;
+        border-radius: 20px;
+        margin:30px auto auto auto}
+    h2{
+        margin-left: 30px;
+        padding: 0px;
+        font-weight: bold;}
+    .fa-chart-line{
+        color: black;
+         margin-left: 80px;}
+    .mvp{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        background-color:#F2F2F2 ;
+        width: 100%;
+        border-radius: 30px;}
+    .paver2{
+        display: flex;
+        flex-direction: row;
+        border: solid 3px white;
+        border-radius: 15px;
+        width: 600px;
+        height: 230px;
+        background-color: white;
+        margin: 40px auto 30px auto;
+        box-shadow: 0px 5px 2px 1px #ecebeb;}
+    .paver2:hover{
+        background-color: #f1eeee;}
+    .image2{
+        width: 300px;
+        height: 230px;
+        border-radius: 15px 0 0 15px;
+        object-fit: cover;
+    }
+    .prix{ margin-bottom: 60px;}
+    
+    /* section activités à Marseille*/
+    
+    .acmar{
+        margin-left: 30px;
+        margin-top: 60px;
+        margin-bottom: 10px ;
+        font-weight: bold;}
+    .activites{
+ 
+    }
+    .horizontal {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        padding: 0;
+        margin: 0 auto;
+        height: auto;
+        width: 630px;
+        
+    }
+    .vertical{
+        border-radius: 20px;
+        border: 0px;
+        height: 420px;
+        box-shadow: 0px 5px 2px 1px #F2F2F2;
+        margin: 0 auto;
+        padding: auto;
+    }
+    .vertical:hover{
+        background-color: #f1eeee;}
+    .img3{
+        width: 290px;
+        height: 350px;
+        border-radius:15px 15px 0 0;
+        object-fit: cover;
+        margin: auto;
+    }
+    h4{
+        padding: 0px;
+        margin: 0px;   
+    }
+    .verti {
+        height: 165px;
+        border: 0px;
+        border-radius: 15px;
+        box-shadow: 0px 5px 2px 1px #F2F2F2;
+        margin: 0 10px 0 10px;
+        padding: auto;
+        
+    }
+    .verti:hover{
+        background-color: #f1eeee;}
+    .img4 {
+        width: 290px;
+        height: 350px;
+        border-radius:15px 15px 0 0;
+        object-fit: cover;
+        margin: 0 auto;
+        padding: 0;
+    }
+    figcaption{
+        margin-left: 20px;
+        height: 40px;
+    }
+    
+    /* footer */
+
+}
+
+
+
+
+
+
+
+
+
+
+@media all and (min-width: 840px) and (max-width: 1000px)
+{
+    .grosbloc{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: stretch;
+        width: 100%;}
+    .section1{
+        width: 100%;
+        height: 950px;
+        margin: 15px auto;
+        background-color: #f2f2f2;
+        border-radius: 15px;}
+    .hébergements {
+        width: 100%;
+        height: 795px;
+        display: flex;
+        flex-wrap:nowrap;
+        flex-direction:row;
+    }
+    .deuxieme{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 100%;
+        height: 200px;
+        margin:0 auto;
+        padding: auto;
+        
+    
+    }
+    .paver {
+        border: solid;
+        border-radius: 15px;
+        border-color: white;
+        margin: 10px auto;
+        padding: auto;
+        background-color: white;
+        height: 250px;
+        width: 400px;
+        box-shadow: 0px 5px 2px 1px #ecebeb;}
+    .paver:hover{
+        background-color: #f1eeee;}
+    .image{
+        width: 400px;
+        height: 170px;
+        border-radius: 15px 15px 0 0;
+        object-fit: cover;
+    }
+    figcaption i {
+        color: #0065FC;}
+    .trois{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin: 0 auto;
+        padding: auto;
+        height: 200px;
+        width: 100%;
+    }
+    h3{
+        margin: 0px;
+        padding: 0px;
+        font-weight: bold;}
+    .voirplus{
+        padding: 0px;
+        margin: 25px auto auto 25px ;
+        font-weight: bold;}
+    
+    /* deuxieme contenaire*/
+    
+    aside{
+        background-color: #f2f2f2;
+        width: 90%;
+        height: auto;
+        border-radius: 20px;
+        margin:30px auto auto auto}
+    h2{
+        margin-left: 30px;
+        padding: 0px;
+        font-weight: bold;}
+    .fa-chart-line{
+        color: black;
+         margin-left: 80px;}
+    .mvp{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        background-color:#F2F2F2 ;
+        width: 100%;
+        border-radius: 30px;}
+    .paver2{
+        display: flex;
+        flex-direction: row;
+        border: solid 3px white;
+        border-radius: 15px;
+        width: 600px;
+        height: 230px;
+        background-color: white;
+        margin: 40px auto 30px auto;
+        box-shadow: 0px 5px 2px 1px #ecebeb;}
+    .paver2:hover{
+        background-color: #f1eeee;}
+    .image2{
+        width: 300px;
+        height: 230px;
+        border-radius: 15px 0 0 15px;
+        object-fit: cover;
+    }
+    .prix{ margin-bottom: 60px;}
+
+    /*activites a marseille*/
+    .acmar{
+        margin-left: 30px;
+        margin-top: 60px;
+        margin-bottom: 10px ;
+        font-weight: bold;}
+    .activites{
+ 
+    }
+    .horizontal {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        padding: auto;
+        margin: 0 auto auto auto;
+        height: auto;
+        width: 620px;
+        
+    }
+    .vertical{
+        border-radius: 20px;
+        border: 0px;
+        height: 330px;
+        box-shadow: 0px 5px 2px 1px #F2F2F2;
+        margin: auto;
+        padding: auto;
+    }
+    .vertical:hover{
+        background-color: #f1eeee;}
+    .img3{
+        width: 220px;
+        height: 300px;
+        border-radius:15px 15px 0 0;
+        object-fit: cover;
+    }
+    h4{
+        padding: 0px;
+        margin: 0px;   
+    }
+    .verti {
+        height: 165px;
+        border: 0px;
+        border-radius: 15px;
+        box-shadow: 0px 5px 2px 1px #F2F2F2;
+        margin: auto;
+        padding: auto;
+        
+    }
+    .verti:hover{
+        background-color: #f1eeee;}
+    .img4 {
+        width: 220px;
+        height: 300px;
+        border-radius:15px 15px 0 0;
+        object-fit: cover;
+        margin: 0 auto;
+        padding: 0;
+    }
+    figcaption{
+        margin-left: 20px;
+        height: 56px;
+    }
+
+}
+
+
+
+
+
+@media all and (min-width: 687px) and (max-width: 840px)
+{
+    .grosbloc{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: stretch;
+        width: 100%;}
+    .section1{
+        width: 100%;
+        height: 950px;
+        margin: 15px auto;
+        background-color: #f2f2f2;
+        border-radius: 15px;}
+    .hébergements {
+        width: 100%;
+        height: 2000px;
+        display: flex;
+        flex-wrap:nowrap;
+        flex-direction:column;
+    }
+    .deuxieme{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        width: 100%;
+        height: 900px;
+        margin:0 auto;
+        padding: auto;
+        
+    
+    }
+    .paver {
+        border: solid;
+        border-radius: 15px;
+        border-color: white;
+        margin: 10px auto;
+        padding: auto;
+        background-color: white;
+        height: 250px;
+        width: 400px;
+        box-shadow: 0px 5px 2px 1px #ecebeb;}
+    .paver:hover{
+        background-color: #f1eeee;}
+    .image{
+        width: 400px;
+        height: 170px;
+        border-radius: 15px 15px 0 0;
+        object-fit: cover;
+    }
+    figcaption i {
+        color: #0065FC;}
+    .trois{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        margin: 0 auto;
+        padding: auto;
+        height: 900px;
+        width: 100%;
+    }
+    h3{
+        margin: 0px;
+        padding: 0px;
+        font-weight: bold;}
+    .voirplus{
+        padding: 0px;
+        margin: 25px auto auto 25px ;
+        font-weight: bold;}
+    
+    /* deuxieme contenaire*/
+    
+    aside{
+        background-color: #f2f2f2;
+        width: 100%;
+        height: auto;
+        border-radius: 20px;
+        margin:auto}
+    h2{
+        margin-left: 30px;
+        padding: 0px;
+        font-weight: bold;}
+    .fa-chart-line{
+        color: black;
+         margin-left: 80px;}
+    .mvp{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        background-color:#F2F2F2 ;
+        width: 100%;
+        border-radius: 30px;}
+    .paver2{
+        display: flex;
+        flex-direction: row;
+        border: solid 3px white;
+        border-radius: 15px;
+        width: 500px;
+        height: 230px;
+        background-color: white;
+        margin: 40px auto 30px auto;
+        box-shadow: 0px 5px 2px 1px #ecebeb;}
+    .paver2:hover{
+        background-color: #f1eeee;}
+    .image2{
+        width: 280px;
+        height: 200px;
+        border-radius: 15px 0 0 15px;
+        object-fit: cover;
+    }
+    .prix{ margin-bottom: 60px;}
+
+    /*activites a marseille*/
+    .acmar{
+        margin-left: 30px;
+        margin-top: 60px;
+        margin-bottom: 10px ;
+        font-weight: bold;}
+    .activites{
+ 
+    }
+    .horizontal {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        padding: auto;
+        margin: 0 auto auto auto;
+        height: auto;
+        width: 620px;
+        
+    }
+    .vertical{
+        border-radius: 20px;
+        border: 0px;
+        height: 330px;
+        box-shadow: 0px 5px 2px 1px #F2F2F2;
+        margin: auto;
+        padding: auto;
+    }
+    .vertical:hover{
+        background-color: #f1eeee;}
+    .img3{
+        width: 220px;
+        height: 300px;
+        border-radius:15px 15px 0 0;
+        object-fit: cover;
+    }
+    h4{
+        padding: 0px;
+        margin: 0px;   
+    }
+    .verti {
+        height: 165px;
+        border: 0px;
+        border-radius: 15px;
+        box-shadow: 0px 5px 2px 1px #F2F2F2;
+        margin: auto;
+        padding: auto;
+        
+    }
+    .verti:hover{
+        background-color: #f1eeee;}
+    .img4 {
+        width: 220px;
+        height: 300px;
+        border-radius:15px 15px 0 0;
+        object-fit: cover;
+        margin: 0 auto;
+        padding: 0;
+    }
+    figcaption{
+        margin-left: 20px;
+        height: 56px;
+    }
+
+}
+
+
+
+
+
+
+
+
+@media all and (min-width: 250px) and (max-width: 350px)
+{
