--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ nav a{
     margin-top: 10px;
     margin-left: 30px;
     margin-right: auto;
-    background-color: white;
+    background-color: rgb(255, 254, 254);
     height: 210px;
     box-shadow: 0px 5px 2px 1px #ecebeb;}
 .paver:hover{
@@ -1210,10 +1210,10 @@ footer a{
     .paver {
         border: solid;
         border-radius: 15px;
-        border-color: white;
+        border-color: white ;
         margin: 10px 10px;
-        background-color: white;
-        height: 220px;
+        background-color: rgb(255, 254, 254);
+        height: 225px;
         width: 95%;
         box-shadow: 0px 5px 2px 1px #ecebeb;}
     .paver:hover{
@@ -1577,7 +1577,7 @@ footer a{
         border-radius: 15px;
         width: 90%;
         height: 170px;
-        background-color: white;
+        background-color: rgb(255, 254, 254);
         margin: 30px auto 10px auto;
         box-shadow: 0px 5px 2px 1px #ecebeb;}
     .paver2:hover{
